<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/bothTeamLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/team_a"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/score"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/textView_scorceOfTeamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="56sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_decreaseScorceOfTeamA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:foreground="?selectableItemBackground"
                        android:text="-"
                        android:textColor="@color/button_text_color" />

                    <Button
                        android:id="@+id/btn_increaseScorceOfTeamA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="+"
                        android:textColor="@color/button_text_color"
                        android:foreground="?selectableItemBackground" />
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/foul"
                    android:textColor="#FF0000"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/textView_foulOfTeamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textColor="#FF0000"
                    android:textSize="56sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_decreaseFoulOfTeamA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="-"
                        android:textColor="@color/button_text_color"
                        android:foreground="?selectableItemBackground"/>

                    <Button
                        android:id="@+id/btn_increaseFoulOfTeamA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="+"
                        android:textColor="@color/button_text_color"
                        android:foreground="?selectableItemBackground"/>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/setTimeContainer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/editText_setTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_in_mins"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="16dp"/>
                <requestFocus/>

                <Button
                    android:id="@+id/btn_countDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_down"
                    android:textColor="@color/button_text_color"
                    android:layout_below="@+id/editText_setTime"
                    android:foreground="?selectableItemBackground"/>

                <TextView
                    android:id="@+id/textView_showTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textSize="28sp"
                    android:layout_below="@+id/btn_countDown"/>

                <Button
                    android:id="@+id/btn_resetTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_time"
                    android:textColor="@color/button_text_color"
                    android:layout_below="@+id/textView_showTime"
                    android:visibility="gone"
                    android:layout_marginTop="50dp"
                    android:foreground="?selectableItemBackground"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/team_b"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/score"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/textView_scorceOfTeamB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="56sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_decreaseScorceOfTeamB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="-"
                        android:textColor="@color/button_text_color"
                        android:foreground="?selectableItemBackground"/>

                    <Button
                        android:id="@+id/btn_increaseScorceOfTeamB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="+"
                        android:textColor="@color/button_text_color"
                        android:foreground="?selectableItemBackground"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/foul"
                    android:textColor="#FF0000"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/textView_foulOfTeamB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textColor="#FF0000"
                    android:textSize="56sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_decreaseFoulOfTeamB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="-"
                        android:textColor="@color/button_text_color"
                        android:foreground="?selectableItemBackground"/>

                    <Button
                        android:id="@+id/btn_increaseFoulOfTeamB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="+"
                        android:textColor="@color/button_text_color"
                        android:foreground="?selectableItemBackground"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bothTeamLayout"
            android:layout_centerHorizontal="true"
            android:text="@string/reset"
            android:textColor="@color/button_text_color"
            android:foreground="?selectableItemBackground"/>
    </RelativeLayout>
</ScrollView>